# libmpv2-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  build.rs
examples/: events.rs  opengl.rs
libmpv-sys/: Cargo.toml  pregenerated_bindings.rs
src/: mpv.rs  tests.rs
src/mpv/: errors.rs  events.rs  render.rs
