[workspace]
members = ["libmpv-sys"]

[package]
name = "libmpv2"
version = "5.0.3"
edition = "2024"
authors = ["kohsine <kevoh1516@gmail.com>"]
license = "LGPL-2.1"
build = "build.rs"
readme = "README.md"
description = "Libmpv abstraction that's easy to use and can play next to all codecs and containers"
repository = "https://github.com/kohsine/libmpv-rs"
keywords = ["media", "playback", "mpv", "libmpv"]
exclude = ["test-data/"]


[dependencies]
libmpv2-sys = { path = "libmpv-sys", version = "4.0.1" }

[dev-dependencies]
crossbeam = "0.8.4"
sdl2 = "0.38"
serde_json = "1.0.140"

[features]
default = ["render"]
render = []          # Enable custom rendering
build_libmpv = []    # build libmpv automatically, provided MPV_SOURCE is set
